# Cal_coin

./: .gitignore  Anchor.toml  buffer_ephemeral.json  cal_coin-keypair.json  cal_coin-prev1.json  cal_coin-recover.json  cal_coin_novelty.json  disc.py  novelty2.json
docs/: bundle.js  https-polyfill.js  idl.json  index.html  page.js
programs/cal-coin/: Cargo.toml
programs/cal-coin/src/: lib.rs  lib2.rs  lib3.rs  lib4.rs  lib5.rs  lib6.rs
scripts/: 1_dapp_and_mint_init.py  dapp_pda.txt  ezhard.py  ezhard_testing.py  get_global_key.py  mint_auth_pda.txt  mint_pubkey.txt
scripts/keys/: dapp_pda.txt  global_key.txt  mint_auth_pda.txt  mint_pubkey.txt  oldhash1.txt  oldhash2.txt  oldhash3.txt  oldhash4.txt  oldhash4_failed.txt  oldhash5_failed.txt  val1-keypair.json  val2-keypair.json
scripts/old scripts/: 1_init_dapp_and_mint.py  1_val1_init.py
tests/: cal-coin.ts
